--- a/index.html
+++ b/index.html
@@ -13,5 +13,7 @@
       sint similique consequuntur deleniti accusantium iure vero repellat
       numquam maiores aut!
     </p>
+    <h2>Bukola</h2>
+    <p>This is all about Bukola</p>
   </body>
 </html>
